# wamrx

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/wamrx/: Cargo.toml
crates/wamrx-sys/: Cargo.toml  build.rs  wrapper.h
crates/wamrx-sys/src/: lib.rs
crates/wamrx/examples/: hello.rs
crates/wamrx/src/: config.rs  engine.rs  error.rs  func.rs  global.rs  instance.rs  lib.rs  linker.rs  memory.rs  module.rs  thread.rs  util.rs  value.rs
crates/wamrx/tests/: integration.rs
