[workspace]
members = ["crates/wamrx-sys", "crates/wamrx"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasmi-labs/wamrx"
authors = ["Robin Freyler"]

[workspace.dependencies]
wamrx-sys = { version = "0.1.0", path = "crates/wamrx-sys" }
