[workspace]
members = ["crates/wamrx-sys", "crates/wamrx"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasmi-labs/wamrx"
authors = ["Robin Freyler <robinfreyler@web.de>"]
version = "0.2.0"
documentation = "https://docs.rs/wamrx-sys/"
readme = "README.md"

[workspace.dependencies]
wamrx-sys = { version = "0.2.0", path = "crates/wamrx-sys" }
